# gans-wireless-comms

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
notebooks/: rayleigh.ipynb
report/: .latexmkrc  ieee.mplstyle  main.tex  references.bib
report/sections/: abstract.tex  authors.tex  conclusion.tex  future_work.tex  introduction.tex  methodology.tex  results.tex
scripts/: config.py  make_mftr_mu_cases_figure.py  make_version16_training_curves.py  plot_version16_training_curves.py  regenerate_conditional_eval_plots.py  test.py  train.py  train_cgan.py
src/app/: artifacts.py  config.py  content.py  inference.py  main.py  plots.py
src/app/markdown/: metrics_help.md  overview.md
src/cgans/: __init__.py  base_cgan.py  cgan.py  components.py  mftr_evaluation.py  mftr_plotting.py
src/gan/: __init__.py  model.py
src/gans/: __init__.py  base_gan.py  components.py  gan.py  wgan_gp.py
src/local_datasets/: __init__.py  mftr_conditional_dataset.py  mftr_dataset.py  mftr_uniform_conditional_dataset.py  nakagami_dataset.py  rayleigh_dataset.py
src/local_distributions/: __init__.py  mftr_dist.py
src/utils/: ieee_plot_style.py
tests/: conftest.py  test_base_gan.py  test_components.py  test_datasets.py  test_gans.py
